<resources>
    <string name="app_name">SwypeTest</string>
    <string name="search_menu">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="line1">Line1</string>
    <string name="line2">Line2</string>
    <string name="line3">Line3</string>
    <string name="line4">Line4</string>
</resources>
